sonarr/values/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: series
              mountPath: /tv
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: series
          persistentVolumeClaim:
            claimName: sonarr-series-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: sonarr-downloads-pvc
